--- a/lang/en.json
+++ b/lang/en.json
@@ -1,35 +1,35 @@
 {
-    "الرئيسية": "Home",
-    "الهيئة": "Organisation",
-    "إقترب إلينا": "Get Closure",
-    "وسائط الإعلام": "Media",
-    "دخول": "Login",
-    "أخر الأخبار": "Latest News",
-    "لا يوجد نتائج للبحث": "There are no search results",
-    "لا توجد مقالات متاحة": "There are no articles available",
-    "أخر المقالات": "Latest Posts",
-    "للإعلانات": "Ads",
-    "مواقع التواصل": "Social Media",
-    "المجلات": "Journals",
-    "إختصارات": "Shortcuts",
-    "فيديوهات": "Videos",
-    "المزيد من": "More of",
-    "مربع البحث": "Search Posts",
-    "البحث": "Search",
-    "تواصلو معنا": "Contact us",
-    "من نحن": "Whoe We Are",
-    "مقالات": "Posts",
-    "التصنيفات": "Categories",
-    "الوسوم": "Tags",
-    "__comment" : "For Settings",
-    "إسم الموقع" : "Blog Name",
-    "البريد الإلكتروني" : "Email",
-    "كلمة السر" : "Password",
-    "هل نسيت كلمة السر ?" : "You Forget Password ?",
-    "الوصف" : "Description",
-    "رقم الهاتف" : "Phone",
-    "العنوان" : "َAddress",
-    "تحديث إعدادات الموقع" : "Update Settings",
-    "إعدادات الموقع" : "Site Settings",
-    "كل الحقوق محفوظة" : "All Right Reserved"
+    "HOME": "Home",
+    "PROJECTS": "Projects",
+    "CATEGORIES": "Categories",
+    "ABOUT_US": "About Us",
+    "CONTACT_US": "Contact Us",
+    "APP_NAME": "European donations platform",
+    "APP_DESCRIPTION": "The platform of the European Commission for Islamic Centers is the easiest and ideal solution to deliver the donor to the needy in various regions through a safe and transparent donation process.",
+    "EXPLORE_PROJECTS": "Explore Projects",
+    "DONATE_NOW": "Donate Now",
+    "HOW_TO_DONATE": "How To Donate",
+    "PROJECT": "Project",
+    "PROJECT_DESCRIPTION": "Choose the appropriate project to donate to and that suits you",
+    "MONEY": "Money",
+    "MONEY_DESCRIPTION": "Choose the amount you want to donate",
+    "PAYMENT_METHODS": "Payment Methods",
+    "PAYMENT_METHODS_DESCRIPTION": "Choose the appropriate payment method for you to donate",
+    "PROJECT_NUMBERS": "Number Of Projects",
+    "VISITOR_NUMBERS": "Number of visitors",
+    "OPERATION_NUMBERS": "Number of donations",
+    "LATEST_PROJECTS": "Latest Projects",
+    "SHARE_LINK": "Share Link",
+    "SHARE_LINK_SOCIAL_MEDIA": "Share via social media",
+    "COPY": "Copy",
+    "COLLECTED": "Collected",
+    "REMAINING": "Remain",
+    "GOAL": "Goal",
+    "DONATE_AMOUNT": "Donate Amount",
+    "PROJECT_COMPLETED": "Project Completed",
+    "DONATE": "Donate",
+    "PROJECT_DETAILS": "Project Details",
+    "ALL_RIGHT_RESERVED": "All Right Reserved",
+    "ALL": "All",
+    "PROJECTS_HEADER_DESCRIPTION": "Various donation opportunities that create a sustainable impact and achieve a wide social impact for the neediest cases."
 }
