--- a/lang/ar.json
+++ b/lang/ar.json
@@ -31,5 +31,25 @@
     "PROJECT_DETAILS": "تفاصيل المشروع",
     "ALL_RIGHT_RESERVED": "كل الحقوق محفوظة",
     "ALL": "الكل",
-    "PROJECTS_HEADER_DESCRIPTION": "فرص تبرع متنوعة تصنع أثراً مستداماً وتحقق أثراً اجتماعياً واسعاً للحالات الأشد احتياجاً."
+    "PROJECTS_HEADER_DESCRIPTION": "فرص تبرع متنوعة تصنع أثراً مستداماً وتحقق أثراً اجتماعياً واسعاً للحالات الأشد احتياجاً.",
+    "CURRENCY": "العملة",
+    "BENEFICIARY": "المستفيد",
+    "BANK_DETAILS": "المعلومات البنكية",
+    "SUISS_FRANC": "الفرنك السويسري",
+    "EURO": "الأورو",
+    "SHARE_PROJECT": "شارك المشروع على",
+    "ORGANISATION_NAME": "الهيئة الأوروبية للمراكز الإسلامية",
+    "ABOUT_ORGANISATION": "عن الهيئة",
+    "ORGANISATION_SLOGAN": "رعاية وارتقاء",
+    "NAME": "الإسم",
+    "SLOGAN": "الشعار",
+    "VISION": "الرؤية",
+    "VISION_DESCRIPTION": "التميز في خدمة المراكز الإسلامية للارتقاء بها وتطوير أداءها.",
+    "MESSAGE": "الرسالة",
+    "MESSAGE_DESCRIPTION": "الارتقاء بدور المراكز الإسلامية في أوروبا، وتطوير وسائلها، وتوسيع نطاق أعمالها، لتستجيب لحاجات وتطلعات مسلمي أوروبا، وللقيام بدور ريادي ضمن مؤسسات المجتمع المدني الأوروبي.",
+    "GOAL_DESCRIPTION": "العناية بالمراكز الإسلامية، ومرافقتها للتطور والارتقاء.",
+    "ORGANISATION_DESCRIPTION": "هي هيئة متخصصة في العناية بشؤون المراكز الإسلامية في أوروبا.\nأُسست وفقاً للمادة (60) وما يتلوها من المواد المتعلقة بتأسيس الجمعيات، من القانون المدني السويسري، بمبادرة من شخصيات دعوية من عدة أقطار أوروبية. وهي جمعية خيرية تطوعية، غير حكومية، مستقلة، وتسعى للعمل وفق رؤية واضحة وأهداف مرسومة وخطوات مدروسة، ووسائل معلنه.",
+    "CHIKH": "معالي الشيخ",
+    "ORGANISATION_PRESIDENT": "مهاجري زيان",
+    "PRESIDENT": "رئيس"
 }
