--- a/lang/en.json
+++ b/lang/en.json
@@ -31,5 +31,25 @@
     "PROJECT_DETAILS": "Project Details",
     "ALL_RIGHT_RESERVED": "All Right Reserved",
     "ALL": "All",
-    "PROJECTS_HEADER_DESCRIPTION": "Various donation opportunities that create a sustainable impact and achieve a wide social impact for the neediest cases."
+    "PROJECTS_HEADER_DESCRIPTION": "Various donation opportunities that create a sustainable impact and achieve a wide social impact for the neediest cases.",
+    "CURRENCY": "Currency",
+    "BANK_DETAILS": "Bank Details",
+    "BENEFICIARY": "Beneficiary",
+    "SUISS_FRANC": "Suiss Franc",
+    "EURO": "Euro",
+    "SHARE_PROJECT": "Share Project",
+    "ORGANISATION_NAME": "European Organization of the Islamic Centers",
+    "ABOUT_ORGANISATION": "About Organisation",
+    "ORGANISATION_SLOGAN": "Care and Upgrading",
+    "NAME": "Name",
+    "SLOGAN": "Slogan",
+    "ORGANISATION_DESCRIPTION": "It is an Organization specialized within caring of the Islamic Centers affairs in Europe. Through the initiative of some imminent religious personalities from Europe, the Organization was established in accordance with the Article 60 and all what follows from the Swiss Civil Code, related to the establishment of associations. It is an independent and nongovernmental voluntary charitable association that leads to work according to a clear vision and previously established aims and steps, and declared means.",
+    "VISION": "Vision",
+    "VISION_DESCRIPTION": "Excellence au service des centres islamiques pour les moderniser et développer leurs performances.",
+    "MESSAGE": "Message",
+    "MESSAGE_DESCRIPTION": "Améliorer le rôle des centres islamiques en Europe, développer leurs moyens et élargir leur champ d'action, pour répondre aux besoins et aux aspirations des musulmans européens et jouer un rôle de premier plan au sein des institutions de la société civile européenne.",
+    "GOAL_DESCRIPTION": "Prendre soin des centres islamiques et les accompagner dans leur développement et leur modernisation.",
+    "CHIKH": "El Chikh",
+    "ORGANISATION_PRESIDENT": "Mehadjri Ziyan",
+    "PRESIDENT": "President"
 }
