--- a/lang/fr.json
+++ b/lang/fr.json
@@ -31,5 +31,25 @@
     "PROJECT_DETAILS": "détails du projet",
     "ALL_RIGHT_RESERVED": "Tous droits réservés",
     "ALL": "Tout",
-    "PROJECTS_HEADER_DESCRIPTION": "Diverses opportunités de dons qui créent un impact durable et réalisent un large impact social pour les cas les plus nécessiteux."
+    "PROJECTS_HEADER_DESCRIPTION": "Diverses opportunités de dons qui créent un impact durable et réalisent un large impact social pour les cas les plus nécessiteux.",
+    "CURRENCY": "Devise",
+    "BANK_DETAILS": "Informations Bancaire",
+    "BENEFICIARY": "Bénéficiaire",
+    "SUISS_FRANC": "Franc Suisse",
+    "EURO": "Euro",
+    "SHARE_PROJECT": "Partager le Projet",
+    "ABOUT_ORGANISATION": "À propos de l'organisation",
+    "ORGANISATION_NAME": "Organisation Européenne des Centres Islamiques",
+    "ORGANISATION_SLOGAN": "Soins et Mise à niveau",
+    "NAME": "Nom",
+    "SLOGAN": "Slogan",
+    "VISION": "Vision",
+    "VISION_DESCRIPTION": "Excellence au service des centres islamiques pour les moderniser et développer leurs performances.",
+    "MESSAGE": "Message",
+    "MESSAGE_DESCRIPTION": "Améliorer le rôle des centres islamiques en Europe, développer leurs moyens et élargir leur champ d'action, pour répondre aux besoins et aux aspirations des musulmans européens et jouer un rôle de premier plan au sein des institutions de la société civile européenne.",
+    "GOAL_DESCRIPTION": "Prendre soin des centres islamiques et les accompagner dans leur développement et leur modernisation.",
+    "ORGANISATION_DESCRIPTION": "L’Organisation Européenne des Centres Islamiques (OECI) a été fondée en décembre 2015 à Genève conformément à l’article 60 et aux articles relatifs à la création d’associations du code civil Suisse. C’est une organisation de bienfaisance, non gouvernementale, apolitique et indépendante qui œuvre dans le cadre de l’Union Européenne. Son siège social est à Genève.\n\n",
+    "CHIKH": "El Chikh",
+    "ORGANISATION_PRESIDENT": "Mehadjri Ziyan",
+    "PRESIDENT": "Président"
 }
