--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,7 +1,7 @@
 {
     "HOME": "الرئيسية",
     "PROJECTS": "المشاريع",
-    "CATEGORIES": "فرص التبرع",
+    "CATEGORIES": "تبرع",
     "ABOUT_US": "عن الهيئة",
     "CONTACT_US": "تواصلوا معنا",
     "APP_NAME": "منصة الهيئة الأوروبية للتبرعات",
