change-all-logo-and-colors-typo

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -4,7 +4,7 @@
     "CATEGORIES": "تبرع",
     "ABOUT_US": "عن الهيئة",
     "CONTACT_US": "تواصلوا معنا",
-    "APP_NAME": "منصة الهيئة الأوروبية للتبرعات",
+    "APP_NAME": "منصة رحمة",
     "APP_DESCRIPTION": "تعدّ منصة الهيئة الأوروبية للمراكز اللإسلامية الحل الأسهل والأمثل لإيصال المتبرع إلى المحتاج في شتى مناطق من خلال عملية تبرع آمنة وشفافة.",
     "EXPLORE_PROJECTS": "تصفح مشاريعنا",
     "DONATE_NOW": "تبرع الأن",
