--- a/lang/ar.json
+++ b/lang/ar.json
@@ -2,7 +2,7 @@
     "HOME": "الرئيسية",
     "PROJECTS": "المشاريع",
     "CATEGORIES": "تبرع",
-    "ABOUT_US": "عن الهيئة",
+    "ABOUT_US": "عن رحمة",
     "CONTACT_US": "تواصلوا معنا",
     "APP_NAME": "منصة رحمة",
     "APP_DESCRIPTION": "تعدّ منصة الهيئة الأوروبية للمراكز اللإسلامية الحل الأسهل والأمثل لإيصال المتبرع إلى المحتاج في شتى مناطق من خلال عملية تبرع آمنة وشفافة.",
